# xiaobawang

./: .env  .env.dev  .env.example  .gitignore  API_SUBSCRIPTION.md  Dockerfile  README.md  README_EN.md  bot.py  docker-compose.yml  kill_port.sh  new_sub.md  pyproject.toml  sub_require.md
.github/workflows/: deploy.yml  docker.yaml
XiaoBaWang-docs/: docusaurus.config.ts  package-lock.json  package.json
XiaoBaWang-docs/docs/: intro.md
XiaoBaWang-docs/docs/deploy/: configuration.md  installation.md  platforms.md
XiaoBaWang-docs/docs/features/: contract-appraisal.md  km-subscription.md  link-preview.md  more-features.md  price-query.md  translation.md  wormhole.md  zkb.md
XiaoBaWang-docs/docs/quick_start/: online-services.md  self-deploy.md
XiaoBaWang-docs/i18n/en/: code.json
XiaoBaWang-docs/i18n/en/docusaurus-plugin-content-docs/: current.json
XiaoBaWang-docs/i18n/en/docusaurus-plugin-content-docs/current/: intro.md
XiaoBaWang-docs/i18n/en/docusaurus-theme-classic/: navbar.json
XiaoBaWang-docs/i18n/zh/: code.json
XiaoBaWang-docs/i18n/zh/docusaurus-plugin-content-docs/: current.json
XiaoBaWang-docs/i18n/zh/docusaurus-theme-classic/: footer.json  navbar.json
XiaoBaWang-docs/src/components/HomepageFeatures/: index.tsx
XiaoBaWang-docs/src/pages/: index.tsx
copilot-docs/: alc.py  copilot.md  orm.md  uninfo.md
docker/: start.sh
migrations/versions/: 38b6c70555d6_statics.py  9b1080fbd7d1_km_push_record.py  a521f657e9db_eve_status_sub.py  bfad6ec1b72d_add_km_sub_v2.py  c1f4e79a0d12_esi_oauth_authorization.py  d9827344f67e_first_revision.py  e3a7f1c24b90_structure_notifications.py
xiaobawang/plugins/background_provider/: __init__.py  aioclient.py  config.py  provider.py
xiaobawang/plugins/bot_info/: __init__.py  config.py  service.py
xiaobawang/plugins/cache/: __init__.py
xiaobawang/plugins/core/: __init__.py  config.py
xiaobawang/plugins/core/api/: anoik.py  base.py  common.py  janice.py  killmail.py  statics.py  war_beacon.py  zkillboard.py
xiaobawang/plugins/core/api/esi/: market.py  universe.py
xiaobawang/plugins/core/command/: __init__.py  common.py  contract.py  eve_status.py  help.py  km.py  link.py  price.py  statics.py  subscription.py  trans.py  wormhole.py  zkb.py
xiaobawang/plugins/core/db/models/: alias.py  event_sub.py  killmail.py  record.py
xiaobawang/plugins/core/handler/: group_event.py
xiaobawang/plugins/core/helper/: alias.py  auth.py  killmail.py  message_queue.py  price.py  rule.py  statics.py  status.py  subscription.py  subscription_v2.py  token_manager.py  wormhole.py
xiaobawang/plugins/core/helper/zkb/: condition_matcher.py  killmail.py  label.py  listener.py  migration.py  processor.py  score_rules.py  (+3 more)
xiaobawang/plugins/core/router/: __init__.py  auth.py  autocomplete.py  statics.py  sub.py
xiaobawang/plugins/core/utils/: github.py
xiaobawang/plugins/eve_daily_luck/: __init__.py  almanac.py  router.py
xiaobawang/plugins/eve_daily_luck/templates/: almanac.html.jinja2  browser.html  index.css
xiaobawang/plugins/eve_oauth/: __init__.py  api.py  config.py  models.py  readme.md  require.md  router.py  service.py
xiaobawang/plugins/eve_oauth/src/: oauth.html  scopes.json
xiaobawang/plugins/frt_pap/: __init__.py  base.html.jinja2  config.py  mining.html.jinja2  npc_kills.html.jinja2  rank.html.jinja2  srp.html.jinja2  template.html.jinja2
xiaobawang/plugins/moveme/: __init__.py  config.py  system.txt
xiaobawang/plugins/online_chat/: __init__.py  router.py
xiaobawang/plugins/online_chat/html/: app.js  index.html  style.css
xiaobawang/plugins/sde/: __init__.py  cache.py  config.py  db.py  models.py  oper.py  upgrade.py  utils.py
xiaobawang/plugins/structure_notifications/: __init__.py  categories.py  config.py  models.py  reuqire.md  router.py  service.py  tasks.py
xiaobawang/plugins/structure_notifications/src/: index.html
xiaobawang/plugins/verify_code/: __init__.py  service.py
xiaobawang/src/html/: subscription.html
xiaobawang/src/html/css/: subscription.css
xiaobawang/src/html/js/: app.js  constants.js  utils.js
xiaobawang/src/templates/: price.html.jinja2
xiaobawang/src/templates/battlereport/: battlereport.css  battlereport.html.jinja2
xiaobawang/src/templates/help/: help.html.jinja2
xiaobawang/src/templates/killmail/: killmail.css  killmail.html.jinja2  killmail_v2.html.jinja2  killmail_v3.css  killmail_v3.html.jinja2  killmail_v3.js
xiaobawang/src/templates/statics/: statics.html.jinja2
xiaobawang/src/templates/wormhole/: system.html.jinja2  wormhole.html.jinja2
xiaobawang/src/templates/zkb/: zkb.html.jinja2
(+28 files in other folders)
