[tool.poetry]
name = "xiaobawang"
version = "0.1.0"
description =  ""
authors = ["zifox666"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
httpx = ">=0.28.1"
jieba = ">=0.42.1"
nonebot-plugin-orm = {extras = ["sqlite"], version = ">=0.7.7"}
redis = ">=5.2.1"
tqdm = ">=4.67.1"
pillow = ">=11.2.1"
matplotlib = ">=3.10.1"
numpy = ">=2.2.4"
nonebot2 = { extras = ["fastapi"], version = "^2.3.3" }
uvicorn = {extras = ["standard"], version = ">=0.34.1,<0.35.0"}
nonebot-plugin-apscheduler = ">=0.5.0"
nonebot-plugin-alconna = ">=0.54.0"
nonebot-plugin-htmlrender = ">=0.6.0"
nonebot-plugin-session = ">=0.2.3"
aiofiles = ">=23.2.1"
ujson = ">=5.9.0"
tenacity = ">=9.0.0"
nonebot-adapter-onebot = ">=2.3.1"
nonebot-adapter-telegram = ">=0.1.0b20"

[tool.nonebot]
plugins = [
    "nonebot_plugin_apscheduler",
    "nonebot_plugin_alconna",
    "nonebot_plugin_htmlrender",
    "nonebot_plugin_session",
]
plugin_dirs = ["xiaobawang/plugins"]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"